--- a/index.html
+++ b/index.html
@@ -4,109 +4,114 @@
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
           </head>
-          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">👋 Hi, I'm Aneesh. 💻 A tech Youtuber. I am 10 years old.
+          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">👋 Hi, I'm Aneesh. 💻 A tech Youtuber. I am 10 years old.
         <br/>______________________________________
         <br/><br/>My Socials
         <br/></div><div id="i3kg2">
-      </div><marquee behavior="scroll" bgcolor="#82caaf" loop="-1" width="100%" id="ihrmc"><i><font color="black">
-          </font></i></marquee></div></div><div id="ivnvc"><p id="i7q12"><a href="https://github.com/aneeshlingala">GitHub</a><br/><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q">YouTube</a><br/><a href="mailto:aneeshlingala61@gmail.com">Email</a></p></div><div id="igu1j">Other Stuff<br/><p id="iq1py"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" rel="noreferrer noopener" target="_blank">Useful software and websites list</a><br/><a href="https://aneeshlingala.github.io/chromebookapp.html" rel="noreferrer noopener" target="_blank">How to use your ChromeBook – App </a> ‍<br/><a href="https://aneeshl.blogspot.com/" rel="noreferrer noopener" target="_blank">My Blog</a> ‍</p><p id="i3fkr"> </p></div><div id="i2zdw"></div><div id="i7sqm"></div></body></body>
+      </div></font></i></marquee></div></div><div id="ivnvc"><p id="i7q12"><a href="https://github.com/aneeshlingala">GitHub</a><br/><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q">YouTube</a><br/><a href="mailto:aneeshlingala61@gmail.com">Email</a></p></div><div id="igu1j">Other Stuff<br/><p id="iq1py"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" rel="noreferrer noopener" target="_blank">Useful software and websites list</a><br/><a href="https://aneeshlingala.github.io/chromebookapp.html" rel="noreferrer noopener" target="_blank">How to use your ChromeBook – App </a> ‍<br/><a href="https://aneeshl.blogspot.com/" rel="noreferrer noopener" target="_blank">My Blog</a> ‍</p><p id="i3fkr"> </p></div><div id="i2zdw"></div><div id="i7sqm"></div></body></body>
         </html>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-  <body style="background-color:#82caaf;">
+ <style>
+.example1 {
+ height: 50px;	
+ overflow: hidden;
+ position: relative;
+}
+.example1 h3 {
+ font-size: 1.5em;
+ color: #00000;
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: center;
+ /* Starting position */
+ -moz-transform:translateX(100%);
+ -webkit-transform:translateX(100%);	
+ transform:translateX(100%);
+ /* Apply animation to this element */	
+ -moz-animation: example1 15s linear infinite;
+ -webkit-animation: example1 15s linear infinite;
+ animation: example1 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+ 0%   { -moz-transform: translateX(100%); }
+ 100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes example1 {
+ 0%   { -webkit-transform: translateX(100%); }
+ 100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+ 0%   { 
+ -moz-transform: translateX(100%); /* Firefox bug fix */
+ -webkit-transform: translateX(100%); /* Firefox bug fix */
+ transform: translateX(100%); 		
+ }
+ 100% { 
+ -moz-transform: translateX(-100%); /* Firefox bug fix */
+ -webkit-transform: translateX(-100%); /* Firefox bug fix */
+ transform: translateX(-100%); 
+ }
+}
+</style>
 
-          <style>
-      div {
-        background-color: #82caaf;
-        color: #000000;
-        padding: 5px;
-      }
-      p {
-        -moz-animation: marquee 10s linear infinite;
-        -webkit-animation: marquee 10s linear infinite;
-        animation: marquee 10s linear infinite;
-      }
-      @-moz-keyframes marquee {
-        0% {
-          transform: translateX(100%);
-        }
-        100% {
-          transform: translateX(-100%);
-        }
-      }
-      @-webkit-keyframes marquee {
-        0% {
-          transform: translateX(100%);
-        }
-        100% {
-          transform: translateX(-100%);
-        }
-      }
-      @keyframes marquee {
-        0% {
-          -moz-transform: translateX(100%);
-          -webkit-transform: translateX(100%);
-          transform: translateX(100%)
-        }
-        100% {
-          -moz-transform: translateX(-100%);
-          -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <p>Linux is my favorite OS, the Linux distro that I currently use is PostMarketOS (Alpine Linux), on my ARM ChromeBook</p>
-    </div>
-  </body>
-</html>
+<!-- HTML -->	
+<div class="example1">
+<h3>Linux is my favorite OS, the Linux distro that I currently use is PostMarketOS (Alpine Linux), on my ARM ChromeBook. </h3>
+</div>
 
 <style>
-      div {
-        background-color: #82caaf;
-        color: #000000;
-        padding: 5px;
-      }
-      p {
-        -moz-animation: marquee 10s linear infinite;
-        -webkit-animation: marquee 10s linear infinite;
-        animation: marquee 10s linear infinite;
-      }
-      @-moz-keyframes marquee {
-        0% {
-          transform: translateX(100%);
-        }
-        100% {
-          transform: translateX(-100%);
-        }
-      }
-      @-webkit-keyframes marquee {
-        0% {
-          transform: translateX(100%);
-        }
-        100% {
-          transform: translateX(-100%);
-        }
-      }
-      @keyframes marquee {
-        0% {
-          -moz-transform: translateX(100%);
-          -webkit-transform: translateX(100%);
-          transform: translateX(100%)
-        }
-        100% {
-          -moz-transform: translateX(-100%);
-          -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <p>Last edited on November 23rd, 2022</p>
-    </div>
-  </body>
-</html>
+.example1 {
+ height: 50px;	
+ overflow: hidden;
+ position: relative;
+}
+.example1 h3 {
+ font-size: 1.5em;
+ color: #00000;
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: center;
+ /* Starting position */
+ -moz-transform:translateX(100%);
+ -webkit-transform:translateX(100%);	
+ transform:translateX(100%);
+ /* Apply animation to this element */	
+ -moz-animation: example1 15s linear infinite;
+ -webkit-animation: example1 15s linear infinite;
+ animation: example1 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+ 0%   { -moz-transform: translateX(100%); }
+ 100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes example1 {
+ 0%   { -webkit-transform: translateX(100%); }
+ 100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+ 0%   { 
+ -moz-transform: translateX(100%); /* Firefox bug fix */
+ -webkit-transform: translateX(100%); /* Firefox bug fix */
+ transform: translateX(100%); 		
+ }
+ 100% { 
+ -moz-transform: translateX(-100%); /* Firefox bug fix */
+ -webkit-transform: translateX(-100%); /* Firefox bug fix */
+ transform: translateX(-100%); 
+ }
+}
+</style>
+
+<!-- HTML -->	
+<div class="example1">
+<h3>Last edited on November 23, 2022 </h3>
+</div>
