--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         </html>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
+<body style="background-color:#82caaf;">
+
  <style>
 .example1 {
  height: 50px;	
