--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
           </head>
-          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">👋 Hi, I'm Aneesh. 💻 A tech Youtuber. I am 10 years old.
+          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">👋 Hi, I'm Aneesh, 💻 a tech Youtuber. I am 10 years old.
         <br/>______________________________________
         <br/><br/>My Socials
         <br/></div><div id="i3kg2">
