--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Linux is my favorite OS, the Linux distro that I currently use is PostMarketOS (Alpine Linux) 🐧 </h3>
+<h3>Linux is my favorite OS, the Linux distro that I currently use is Fedora Linux. 🐧 </h3>
 </div>
 
 <style>
