--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Linux is my favorite OS, the Linux distro that I currently use is Artix Linux. 🐧 </h3>
+<h3>Linux is my favorite OS, the Linux distro that I currently use is postmarketOS based on Alpine Linux. 🐧 </h3>
 </div>
 
 <style>
@@ -115,5 +115,5 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on November 23, 2022 📅 </h3>
+<h3>Last edited on January 13, 2023 📅 </h3>
 </div>
