--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Linux is my favorite OS, the Linux distro that I currently use is Debian instead of chromeOS on my ARM (Mediatek MT8183) Chromebook. 🐧 </h3>
+<h3>Linux is my favorite OS, the Linux distro that I currently use is Debian. 🐧 </h3>
 </div>
 
 <style>
