--- a/index.html
+++ b/index.html
@@ -115,5 +115,5 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on January 19, 2023 📅 </h3>
+<h3>Last edited on February 3rd, 2023 📅 </h3>
 </div>
