--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
 <h3>Last edited on February 6th, 2023 📅 </h3>
 </style>
 <p></p>
-<link rel="icon" href="icons/favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <body style="background-color:#82caaf;">
