--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img  alt=""/><img src="icons/youtube.png" alt="Youtube" width="48" height="48"/></a><img  alt=""/></p>
 <p style="text-align: center;"><img  alt=""/><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="icons/email.png" alt="Email" width="48" height="48"/></a></p>
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="icons/github.png" alt="Github" width="48" height="48"/></a></p>
-<h3 style="text-align: center;"><a href="chromebookapp.html" target="_blank" rel="noopener" title="Android App ➡ Resources to Use your Chromebook."</a>Resources for your Chromebook ➡ Android App </h3>
+<h3 style="text-align: center;"><a href="chromebookapp.html" target="_blank" rel="noopener" title="Resources to Use your Chromebook."</a>Android App ➡ Resources for your Chromebook</h3>
 <h3 style="text-align: center;"><a href="useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <p></p>
 
