--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -1,4 +1,4 @@
-<h2 style="text-align: center;">My App - How to use your ChromeBook</h2>
+<h2 style="text-align: center;">Android App ➡ How to use your ChromeBook 💻</h2>
 <p></p>
 <p style="text-align: center;">This app teaches you how to use the basic functions of your ChromeBook!</p>
 <p></p>
