--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -8,17 +8,14 @@
 <h4 style="text-align: center;"></h4>
 <h4 style="text-align: center;">3. <a href="https://rufus.ie/" title="Rufus" target="_blank" rel="noopener">Rufus</a></h4>
 <p></p>
-<h4 style="text-align: center;">4. <a href="https://linuxmint.com/" target="_blank" rel="noopener" title="Linux mint">Linux Mint</a></h4>
+<h4 style="text-align: center;">4. <a href="https://debian.org/" target="_blank" rel="noopener" title="Debian Linux">Debian Linux</a></h4>
 <p></p>
 <p style="text-align: center;"></p>
 <h4 style="text-align: center;"><a href="/" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
 <p></p>
 <p style="text-align: center;"></p>
 <style>
-body {
-  background-image: url('sitebg.jpg');
-  background-repeat: no-repeat;
-}
+
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
