--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -2,7 +2,9 @@
 <p></p>
 <p style="text-align: center;">This app teaches you how to use the basic functions of your ChromeBook!</p>
 <p></p>
-<p style="text-align: center;"><a href="https://github.com/aneeshlingala/aneeshlingala.github.io/raw/main/app_2176134_1677327.apk" target="_blank" rel="noopener" title="Download">Download</a></p>
+<p style="text-align: center;"><a href="https://github.com/aneeshlingala/aneeshlingala.github.io/raw/main/app_2176134_1677327.apk" target="_blank" rel="noopener" title="Download">Download the app (APK)</a></p>
+<p></p>
+<h4 style="text-align: center;"><a href="/" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <body style="background-color:#82caaf;">
