--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <h2 style="text-align: center;">Welcome to my website!&nbsp;</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me 🧒</span><span style="color: #ffffff;"></span></h3>
-<p style="text-align: center;"><span style="color: #000000;">1. My name is Aneesh.&nbsp;</span></p>
-<p style="text-align: center;"><span style="color: #000000;">2. I am&nbsp;10 years old.</span></p>
-<p style="text-align: center;"><span style="color: #000000;">3. I like to code.</span></p>
-<p style="text-align: center;"><span style="color: #000000;">4. I have a YouTube Channel.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">• My name is Aneesh.&nbsp;</span></p>
+<p style="text-align: center;"><span style="color: #000000;">• I am&nbsp;10 years old.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">• I like to code.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">• I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
 <h3 style="text-align: center;"><span style="color: #000000;">Social Media 📧</span></h3>
 <p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img  alt=""/><img src="icons/youtube.png" alt="Youtube" width="48" height="48"/></a><img  alt=""/></p>
