--- a/index.html
+++ b/index.html
@@ -77,3 +77,16 @@
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <body style="background-color:#82caaf;">
+	  
+ <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div class="cursor rounded"></div>
+<div class="cursor pointed"><div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
+
