--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 <!-- HTML -->	
 <div class="example1">
-<h3>Linux is my favorite OS, the Linux distro that I currently use is Devuan Linux. 🐧 </h3>
+<h3>Linux is my favorite OS, the Linux distro that I currently use is Artix Linux. 🐧 </h3>
 </div>
 <style>
 .example1 {
@@ -72,7 +72,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on February 6th, 2023 📅 </h3>
+<h3>Last edited on February 8th, 2023 📅 </h3>
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
