--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 <!-- HTML -->	
 <div class="example1">
-<h3>Linux is my favorite OS, the Linux distro that I currently use is Artix Linux. 🐧 </h3>
+<h3>GNU/Linux is my most favorable operating system, the GNU/Linux distro that I currently use is Fedora Linux, version 37. 🐧 </h3>
 </div>
 <style>
 .example1 {
