--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <body style="background-color:#82caaf;">
+  <body style="background-color:#ff6666;">
 	  
 
 
