--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -7,4 +7,4 @@
 <h4 style="text-align: center;"><a href="/" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <body style="background-color:#82caaf;">
+  <body style="background-color:#ff6666;">
