--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <body style="background-color:#ff6666;">
-	  
+ <body style="background-color:#1A535C;">	  
 
 
 
