--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -19,4 +19,4 @@
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
- <body style="background-color:#1A535C;">
+ <body style="background-color:#E1CE7A;">
