--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<title>🅐🅝🅔🅔🅢🅗'🅢 🅦🅔🅑🅢🅘🅣🅔</title>
+<title>𝓐𝓷𝓮𝓮𝓼𝓱'𝓼 𝓦𝓮𝓫𝓼𝓲𝓽𝓮</title>
 <link rel="canonical" href="https://aneeshlingala.github.io" />
-<h2 style="text-align: center;">Welcome to my website!&nbsp;</h2>
+<h2 style="text-align: center;">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕤𝕞𝕒𝕝𝕝 𝕤𝕡𝕒𝕔𝕖 𝕠𝕟 𝕥𝕙𝕖 𝕚𝕟𝕥𝕖𝕣𝕟𝕖𝕥!</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me 🧒</span><span style="color: #ffffff;"></span></h3>
 <p style="text-align: center;"><span style="color: #000000;">• My name is Aneesh.&nbsp;</span></p>
