--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="canonical" href="https://aneeshlingala.github.io" />
 <h2 style="text-align: center;">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕨𝕖𝕓𝕤𝕚𝕥𝕖!</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
-<h3 style="text-align: center;"><span style="color: #000000;">About me 🧒</span><span style="color: #ffffff;"></span></h3>
+<h3 style="text-align: center;"><span style="color: #000000;">About Me 🧒</span><span style="color: #ffffff;"></span></h3>
 <p style="text-align: center;"><span style="color: #000000;">• My name is Aneesh.&nbsp;</span></p>
 <p style="text-align: center;"><span style="color: #000000;">• I am&nbsp;10 years old.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">• I like to code.</span></p>
