--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About Me 🧒</span><span style="color: #ffffff;"></span></h3>
 <p style="text-align: center;"><span style="color: #000000;">• My name is Aneesh.&nbsp;</span></p>
-<p style="text-align: center;"><span style="color: #000000;">• I am&nbsp;10 years old.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">• I am&nbsp;11 years old.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">• I like to code.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">• I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
@@ -21,7 +21,7 @@
 </style>
 <!-- HTML -->	
 <div class="example1">
-<h3>GNU/Linux is my most favorable operating system, the GNU/Linux distro that I currently use is Fedora Linux. 🐧 </h3>
+<h3>GNU/Linux is my most favorable operating system, the GNU/Linux distro that I currently use is Arch Linux. 🐧 </h3>
 </div>
 <style>
 .example1 {
@@ -72,7 +72,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on February 24th, 2023 📅 </h3>
+<h3>Last edited on March 2nd, 2023 📅 </h3>
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
