--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 <!-- HTML -->	
 <div class="example1">
-<h3>GNU/Linux is my preferred operating system, the GNU/Linux distro that I currently use is Artix Linux. 🐧 </h3>
+<h3>GNU/Linux is my preferred operating system. The GNU/Linux distro that I currently use is Fedora Linux. 🐧 </h3>
 </div>
 <style>
 .example1 {
@@ -72,7 +72,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on May 13th, 2023 📅 </h3>
+<h3>Last edited on May 14th, 2023 📅 </h3>
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
