--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>𝓐𝓷𝓮𝓮𝓼𝓱'𝓼 𝓦𝓮𝓫𝓼𝓲𝓽𝓮</title>
+<title>--- Aneesh's Website ---</title>
 <link rel="canonical" href="https://aneeshlingala.github.io" />
 <h2 style="text-align: center;">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕨𝕖𝕓𝕤𝕚𝕥𝕖!</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
