--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>--- Aneesh's Website ---</title>
+<title>𝒜𝓃𝑒𝑒𝓈𝒽'𝓈 𝒲𝑒𝒷𝓈𝒾𝓉𝑒</title>
 <link rel="canonical" href="https://aneeshlingala.github.io" />
 <h2 style="text-align: center;">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕨𝕖𝕓𝕤𝕚𝕥𝕖!</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
@@ -21,7 +21,7 @@
 </style>
 <!-- HTML -->	
 <div class="example1">
-<h3>GNU/Linux is my preferred operating system. The GNU/Linux distro that I currently use is Fedora Linux. 🐧 </h3>
+<h3>GNU/Linux is my preferred operating system. The GNU/Linux distro that I currently use is Devuan Linux. 🐧 </h3>
 </div>
 <style>
 .example1 {
@@ -72,7 +72,7 @@
 
 <!-- HTML -->	
 <div class="example1">
-<h3>Last edited on May 14th, 2023 📅 </h3>
+<h3>Last edited on May 25th, 2023 📅 </h3>
 </style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
