--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
  <body style="background-color:#E1CE7A;">	  
+  
+</style>
+    <script src="js/fairyDustCursor.js">new ghostCursor();</script>    
 
 
 
