--- a/server.html
+++ b/server.html
@@ -1,3 +1,4 @@
-<meta http-equiv="refresh" content="7; url='http://192.168.254.20:8000'" />
-<a href="https://www.w3docs.com/">Manual Redirect to Personal HTTP Server</a>
+<title>Redirect to personal HTTP server</title>
+<meta http-equiv="refresh" content="5;url=http://192.168.254.20:8000/">
+<p>If you are not automatically redirected, please click <a href="http://192.168.254.20:8000/">here</a>.</p>
 
