--- a/server.html
+++ b/server.html
@@ -2,3 +2,5 @@
 <meta http-equiv="refresh" content="5;url=http://192.168.254.20:8000/">
 <p>If you are not automatically redirected, please click <a href="http://192.168.254.20:8000/">here</a>.</p>
 
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+ <body style="background-color:#E1CE7A;">
