--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<title>𝒜𝓃𝑒𝑒𝓈𝒽'𝓈 𝒲𝑒𝒷𝓈𝒾𝓉𝑒</title>
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+<title>Aneesh's Website</title>
 <link rel="canonical" href="https://aneeshlingala.github.io" />
 <h2 style="text-align: center;">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕨𝕖𝕓𝕤𝕚𝕥𝕖!</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
