--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -1,3 +1,13 @@
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 <title>Useful software and websites</title>
 	<link rel="canonical" href="https://aneeshlingala.github.io/useful-software-and-websites.html" />
 <h1 style="text-align: center;">Useful software and websites 🌐👨‍💻</h1>
