--- a/server.html
+++ b/server.html
@@ -1,3 +1,13 @@
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 <title>Redirect to personal HTTP server</title>
 <meta http-equiv="refresh" content="5;url=http://192.168.254.20:8000/">
 <p>If you are not automatically redirected, please click <a href="http://192.168.68.64:8000/">here</a>.</p>
