--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -1,3 +1,13 @@
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 <h2 style="text-align: center;">Android App ➡ How to use your ChromeBook 💻</h2>
 <p></p>
 <p style="text-align: center;">This app teaches you how to use the basic functions of your ChromeBook!</p>
