now hosted on gitlab

--- a/server.html
+++ b/server.html
@@ -8,9 +8,8 @@ function googleTranslateElementInit() {
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<title>Redirect to personal HTTP server</title>
-<meta http-equiv="refresh" content="5;url=http://192.168.254.20:8000/">
-<p>If you are not automatically redirected, please click <a href="http://192.168.68.64:8000/">here</a>.</p>
+<title>Redirect to new personal website</title>
+<meta http-equiv="refresh" content="5;url=https://aneeshlingala.gitlab.io">
+<p>If you are not automatically redirected, please click <a href="https:/aneeshlingala.gitlab.io">here</a>.</p>
 
-<link rel="icon" href="favicon.ico" type="image/x-icon"/>
- <body style="background-color:#E1CE7A;">
+<body style="background-color:#E1CE7A;">
