--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ function googleTranslateElementInit() {
 
 <title>Redirect to new personal website</title>
 <meta http-equiv="refresh" content="5;url=https://aneeshlingala.gitlab.io">
-<p>If you are not automatically redirected, please click <a href="https:/aneeshlingala.gitlab.io">here</a>.</p>
+<p>If you are not automatically redirected, please click <a href="https://aneeshlingala.gitlab.io">here</a>.</p>
 
 <body style="background-color:#E1CE7A;">
