--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <title>Redirect to new personal website</title>
-<meta http-equiv="refresh" content="5;url=https://aneeshlingala.gitlab.io">
-<p>If you are not automatically redirected, please click <a href="https://aneeshlingala.gitlab.io">here</a>.</p>
+<meta http-equiv="refresh" content="2;url=https://aneeshlingala.gitlab.io">
+<p>I have migrated my website to GitLab (aneeshlingala.gitlab.io). Press <a href="https://aneeshlingala.gitlab.io">here to redirect to my new website manually.</a>.</p>
 
 <body style="background-color:#E1CE7A;">
