--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@ function googleTranslateElementInit() {
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<title>Redirect to new personal website</title>
-<meta http-equiv="refresh" content="2;url=https://aneeshlingala.gitlab.io">
-<p>I have migrated my website to GitLab (aneeshlingala.gitlab.io). Press <a href="https://aneeshlingala.gitlab.io">here to redirect to my new website manually.</a>.</p>
-
+<title>Redirecting to proxy...</title>
+<meta http-equiv="refresh" content="2;url=http://50.47.222.139:8080/">
 <body style="background-color:#E1CE7A;">
